--- a/index.html
+++ b/index.html
@@ -96,10 +96,19 @@
                 </li>
               </ul>
               <ul class="mobile__socials">
-                <li class="list mobile__item"><a class="link" href="">Instagram</a></li>
-                <li class="list mobile__item"><a class="link" href="">Twitter</a></li>
-                <li class="list mobile__item"><a class="link" href="">Facebook</a></li>
-                <li class="list mobile__item"><a class="link" href="">LinkedIn</a></li>
+                <li class="list mobile__item">
+                  <a class="link" href="https://www.instagram.com">Instagram</a>
+                </li>
+
+                <li class="list mobile__item">
+                  <a class="link" href="https://twitter.com">Twitter</a>
+                </li>
+                <li class="list mobile__item">
+                  <a class="link" href="https://www.facebook.com">Facebook</a>
+                </li>
+                <li class="list mobile__item">
+                  <a class="link" href="https://www.linkedin.com">LinkedIn</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -306,25 +315,25 @@
                 <p class="team__text">Product Designer</p>
                 <ul class="list socials__list">
                   <li>
-                    <a class="socials__link" href=""
+                    <a class="socials__link" href="https://www.instagram.com"
                       ><svg class="socials__svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="socials__link" href=""
+                    <a class="socials__link" href="https://twitter.com"
                       ><svg class="socials__svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="socials__link" href=""
+                    <a class="socials__link" href="https://www.facebook.com"
                       ><svg class="socials__svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="socials__link" href=""
+                    <a class="socials__link" href="https://www.linkedin.com"
                       ><svg class="socials__svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
@@ -353,25 +362,25 @@
                 <p class="team__text">Frontend Developer</p>
                 <ul class="list socials__list">
                   <li>
-                    <a class="socials__link" href=""
+                    <a class="socials__link" href="https://www.instagram.com"
                       ><svg class="socials__svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="socials__link" href=""
+                    <a class="socials__link" href="https://twitter.com"
                       ><svg class="socials__svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="socials__link" href=""
+                    <a class="socials__link" href="https://www.facebook.com"
                       ><svg class="socials__svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="socials__link" href=""
+                    <a class="socials__link" href="https://www.linkedin.com"
                       ><svg class="socials__svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
@@ -400,25 +409,25 @@
                 <p class="team__text">Marketing</p>
                 <ul class="list socials__list">
                   <li>
-                    <a class="socials__link" href=""
+                    <a class="socials__link" href="https://www.instagram.com"
                       ><svg class="socials__svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="socials__link" href=""
+                    <a class="socials__link" href="https://twitter.com"
                       ><svg class="socials__svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="socials__link" href=""
+                    <a class="socials__link" href="https://www.facebook.com"
                       ><svg class="socials__svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="socials__link" href=""
+                    <a class="socials__link" href="https://www.linkedin.com"
                       ><svg class="socials__svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
@@ -447,25 +456,25 @@
                 <p class="team__text">UI Designer</p>
                 <ul class="list socials__list">
                   <li>
-                    <a class="socials__link" href=""
+                    <a class="socials__link" href="https://www.instagram.com"
                       ><svg class="socials__svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="socials__link" href=""
+                    <a class="socials__link" href="https://twitter.com"
                       ><svg class="socials__svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="socials__link" href=""
+                    <a class="socials__link" href="https://www.facebook.com"
                       ><svg class="socials__svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="socials__link" href=""
+                    <a class="socials__link" href="https://www.linkedin.com"
                       ><svg class="socials__svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
@@ -560,25 +569,25 @@
             <p class="footer__text">приєднуйтесь</p>
             <ul class="list footer-socials__list">
               <li class="footer-socials__item">
-                <a class="footer-socials__link" href=""
+                <a class="footer-socials__link" href="https://www.instagram.com"
                   ><svg class="footer-socials__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram"></use></svg
                 ></a>
               </li>
               <li class="footer-socials__item">
-                <a class="footer-socials__link" href=""
+                <a class="footer-socials__link" href="https://twitter.com"
                   ><svg class="footer-socials__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter"></use></svg
                 ></a>
               </li>
               <li class="footer-socials__item">
-                <a class="footer-socials__link" href=""
+                <a class="footer-socials__link" href="https://www.facebook.com"
                   ><svg class="footer-socials__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook"></use></svg
                 ></a>
               </li>
               <li class="footer-socials__item">
-                <a class="footer-socials__link" href=""
+                <a class="footer-socials__link" href="https://www.linkedin.com"
                   ><svg class="footer-socials__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin"></use></svg
                 ></a>
