--- a/portfolio.html
+++ b/portfolio.html
@@ -769,25 +769,25 @@
             <p class="footer__text">приєднуйтесь</p>
             <ul class="list footer-socials__list">
               <li class="footer-socials__item">
-                <a class="footer-socials__link" href=""
+                <a class="footer-socials__link" href="https://www.instagram.com"
                   ><svg class="footer-socials__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram"></use></svg
                 ></a>
               </li>
               <li class="footer-socials__item">
-                <a class="footer-socials__link" href=""
+                <a class="footer-socials__link" href="https://twitter.com"
                   ><svg class="footer-socials__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter"></use></svg
                 ></a>
               </li>
               <li class="footer-socials__item">
-                <a class="footer-socials__link" href=""
+                <a class="footer-socials__link" href="https://www.facebook.com"
                   ><svg class="footer-socials__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook"></use></svg
                 ></a>
               </li>
               <li class="footer-socials__item">
-                <a class="footer-socials__link" href=""
+                <a class="footer-socials__link" href="https://www.linkedin.com"
                   ><svg class="footer-socials__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin"></use></svg
                 ></a>
