--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <use href="./images/icons.svg#icon-phone-tel"></use>
                   </svg>
                 </div>
-                <label class="modal-form__label" for="mail">Ім'я</label>
+                <label class="modal-form__label" for="mail">Пошта</label>
                 <div class="modal-form__box">
                   <input class="modal-form__input" type="email" name="mail" id="mail" required />
                   <svg class="modal-form__icon" width="18px" height="18px">
